log/build_2023-09-19_00-44-19/hand_detector/stderr.log
  File "/home/keny/MANOS_ws/install/hand_detector/lib/python3.8/site-packages/hand_detector/hand_detector.py", line 55
    self.rhand_pointer_publisher.publish(self.pos_message(digits[1])))
                                                                     ^
SyntaxError: unmatched ')'

